--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,6 +526,99 @@ section {
   background: #fff;
   border: 2px solid #1f5297;
 }
+/* --------------------------------------------------------------
+# Struktur
+-------------------------------------------------------------- */
+.struktur .content{
+        display: flex;
+        align-content: center;
+        justify-content: center;
+      }
+      .content {
+        width: 100%;
+      }
+      .content .panjang {
+        width: 300px;
+        height: 20px;
+        background: #333;
+        border-radius: 12px;
+        margin-bottom: 70px;
+      }
+      .content .panjang:nth-child(1){
+        margin-top: 50px;
+      }
+      .panjang .bawah {
+        position: relative;
+        width: 20px;
+        height: 70px;
+        background: #333;
+        border-radius: 12px;
+      }
+      .panjang .bawah:nth-child(2){
+        margin-top: -70px;
+        margin-left: 257px;
+      }
+      .panjang .bawah:after {
+        content: ''; /* Menambahkan konten pseudo-element */
+        position: absolute; /* Menjadikan posisi pseudo-element absolut */
+        bottom: -20px; /* Meletakkan pseudo-element di bagian bawah */
+        left: 50%; /* Meletakkan pseudo-element di tengah */
+        transform: translateX(-50%); /* Menggeser pseudo-element ke kiri sejauh 50% dari lebarnya */
+        width: 90px; /* Lebar pseudo-element */
+        height: 50px; /* Tinggi pseudo-element */
+        background: #333; /* Warna pseudo-element sama dengan elemen utama */
+        border-radius: 15px; /* Membuat bentuk bulat dengan border-radius */
+      }
+      .panjang .bawah .nama {
+        position: absolute; /* Menjadikan posisi elemen absolut */
+        bottom: -20px; /* Meletakkan elemen di bawah pseudo-element */
+        left: 50%; /* Meletakkan elemen di tengah */
+        transform: translateX(-50%); /* Menggeser elemen ke kiri sejauh 50% dari lebarnya */
+        color: white; /* Warna teks putih */
+        z-index: 1;
+      }
+      .lurusp{
+        position: absolute;
+        top: 50px;
+        width: 20px;
+        height: 290px;
+        background: #333;
+      }
+      .kategori{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        font-size: 18px;
+      }
+      .kategori .ket {
+        position: relative;
+        color: #f3f3f3;
+        background-color: #333;
+        border-radius: 12px;
+        padding: 15px;
+        margin-top: 30px;
+        margin-bottom: 65px;
+        z-index: 2;
+      }
+      .kategori .sek {
+        position: relative;
+        color: #f3f3f3;
+        background-color: #333;
+        border-radius: 12px;
+        padding: 15px;
+        margin-top: 30px;
+        margin-bottom: 75px;
+        z-index: 2;
+      }
+      .kategori .ben {
+        position: relative;
+        color: #f3f3f3;
+        background-color: #333;
+        border-radius: 12px;
+        padding: 15px;
+        z-index: 2;
+      }
 
 /*--------------------------------------------------------------
 # Portfolio
